--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ PORT=5000
 DB_NAME=schedule
 DB_USER=postgres
 DB_PASSWORD=root
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=5400
 JWT_SECRET=/'MyJWT/%$sdfSecreLtfsKEYd&d
